Switched Jekyll-Apple-Help setup to allow localization and Improved indexing - Each language is now its own Jekyll Collection (_English.lproj, _Japanese.lproj, etc) - Moved help topics collection to localize version (_English.lproj) - Adjusted makefile to index all languages Index Improvements to default layout - Added support for robots - Added tight-NAV tags around navigation text to de-index it

--- a/XynkHelp/_English.lproj/index.html
+++ b/XynkHelp/_English.lproj/index.html
@@ -2,12 +2,13 @@
 layout: default
 title: Xynk Help
 apple_title: Xynk Help
+robots: noindex
 ---
 
 <div class="splash">
 	
 <h1>{{ page.title }}</h1>
 
-<img src="book-icon.png"/>
+<img src="{{ page.rel_root }}/book-icon.png"/>
 
 </div>
